# numpy

./: CMakeLists.txt
numpy/core/src/multiarray/: nditer.c.src
numpy/distutils/command/: build.py  build_ext.py  config_compiler.py  install.py
